# Dingus-Framework

./: Cargo.toml
dingus_builtins/: Cargo.toml
dingus_builtins/src/: consts.rs  lib.rs  reg.rs
dingus_builtins/src/archetypes/: mod.rs
dingus_builtins/src/components/: mod.rs
dingus_builtins/src/resources/: mod.rs  renderer.rs
dingus_builtins/src/systems/: mod.rs  render.rs  update.rs
dingus_ecs/: Cargo.toml
dingus_ecs/src/: fast_bit.rs  generated.rs  lib.rs  reg_loc.rs
dingus_ecs/src/archetype/: archetype_bundle.rs  archetype_marker.rs  archetype_static_descriptor.rs  archetype_struct.rs  mod.rs
dingus_ecs/src/command/: buffer.rs  commands.rs  mod.rs
dingus_ecs/src/component/: component_info.rs  component_registry.rs  component_storage.rs  component_trait.rs  mod.rs  util.rs
dingus_ecs/src/entity/: mod.rs
dingus_ecs/src/export/: export_error.rs  instance.rs  mod.rs  primitive.rs  primitive_conversion.rs
dingus_ecs/src/query/: access.rs  mod.rs  query.rs  query_archetype.rs  query_param.rs  query_state.rs
dingus_ecs/src/resource/: mod.rs  res.rs  resource_map.rs  resource_trait.rs
dingus_ecs/src/schedule/: mod.rs  stage.rs  system_param.rs  system_trait.rs
dingus_ecs/src/world/: mod.rs  world_struct.rs
dingus_macros/: Cargo.toml
dingus_macros/src/: lib.rs  util.rs
dingus_macros/src/generators/: gen_archetype.rs  gen_component.rs  gen_resource.rs  mod.rs
dingus_macros/src/parsers/: archetype_parse.rs  mod.rs  parse_component.rs  parse_list.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
