[package]
name = "dingus_ecs"
version = "0.1.0"
edition = "2024"
description = "An high performance, archetypal ECS library with static archetypes in rust used for dingus engine."
license = "MIT"
repository = "https://github.com/DingusFreshly/"
keywords = ["ecs", "archetypal-ecs", "game-development", "rust", "dingus-engine"]

[dependencies]
linkme = "0.3.0"
dingus_macros = { path = "../dingus_macros" }